fix: use better fonts for legibility

--- a/codeanon/static/css/bulma/_overrides.scss
+++ b/codeanon/static/css/bulma/_overrides.scss
@@ -3,6 +3,11 @@
 @import "bulma/sass/utilities/all";
 @import "glitch";
 
+h1,h2,h3,h4,h5,h6 {
+  font-family: $header-family;
+  font-weight: bold;
+}
+
 .box {
   border-style: solid;
   border-width: 1px 1px $thickness 1px;
@@ -349,21 +354,7 @@ table {
 }
 
 .fade-in-top {
-  -webkit-animation: fade-in-top 1.2s cubic-bezier(.39, .575, .565, 1) both;
   animation: fade-in-top 1.2s cubic-bezier(.39, .575, .565, 1) both
-}
-
-@-webkit-keyframes fade-in-top {
-  0% {
-    -webkit-transform: translateY(-50px);
-    transform: translateY(-50px);
-    opacity: 0
-  }
-  100% {
-    -webkit-transform: translateY(0);
-    transform: translateY(0);
-    opacity: 1
-  }
 }
 
 @keyframes fade-in-top {
